samples/_failures_safe/1761040317_e46d7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5dc46998.c: In function ‘main’:
./samples/SAFE/__tmp_5dc46998.c:180: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5dc46998.c:179:9: error: expected declaration or statement at end of input
  179 |         if
      |         ^~
./samples/SAFE/__tmp_5dc46998.c:179:9: error: expected declaration or statement at end of input
